Bug 156739 - Customization dialog: Drag-and-Drop is broken (regression)
Summary: Customization dialog: Drag-and-Drop is broken (regression)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.1.0.3 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL: https://ask.libreoffice.org/t/how-to-...
Whiteboard: target:26.2.0 target:25.8.3
Keywords: bibisected, bisected, regression, topicUI
Depends on:
Blocks: Customise-Dialog
  Show dependency treegraph
 
Reported: 2023-08-11 11:30 UTC by Mike Kaganski
Modified: 2025-09-20 08:08 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2023-08-11 11:30:17 UTC
Up to version 5.0 (inclusive), the Customization dialog offered a Drag-and-Drop interface for adding buttons. It worked this way: the [Add] button opened an "Add Commands" modeless dialog; it had this notice: "To add a command to a toolbar, select the category and then the command. Then drag the command to the Commands list of the Toolbars tab page in the Customize dialog.", and the user would literally follow the advise. Dragging would show a horizontal line in the place where the command would arrive in the Commands list, as one would expect.

Then it regressed gradually from version to version.

In 5.1, the function still continued to work; yet, the horizontal line disappeared, and one would only guess it works, without any visual feedback during the DnD operation.

In 5.2, it broke: the "Add Commands" dialog became modal, and so, the still "working" DnD functionality (the message was still there; one could grab a command with mouse, and drag it around) couldn't drop it where it suggested.

In 5.4, the message was still there; but the drag functionality was removed from the "Add Commands" dialog's Commands list - one couldn't even start dragging around.

And finally, in 6.0, the customization dialog was re-designed, to not use a separate "Add Commands" dialog, and have everything in one place - but without that DnD interface.

Today, I learned about this lost functionality from a user who migrated from OpenOffice [1]:

> I take it there is no drag and drop interface like ooo?

Adding a DnD interface now (with a single dialog) should be no harder than before (when it was across different dialog); and it looks reasonable request to have it.

[1] https://ask.libreoffice.org/t/how-to-add-endnotes-solved/94532/6
Comment 1 stragu 2023-08-31 09:26:23 UTC
Confirmed, thanks Mike. I checked OOo 3,3 LO 5.4, 6.0 and recent master on Linux and it is as described.

If it is brought back, it needs to be done for Toolbars but also for the Menus and Context Menus tabs, for consistency.
Comment 2 QA Administrators 2025-09-10 03:12:56 UTC Comment hidden (obsolete)
Comment 3 Saburo 2025-09-12 08:27:34 UTC
bibisected with win32-5.2
can't DnD
Version: 5.2.0.0.alpha1+
commit 1765ae3f74c65ad52b79d4ee29ac761f16ddd7bf
author	Caolán McNamara <caolanm@redhat.com>	Mon May 23 13:05:56 2016 +0100

Resolves: tdf#99981 make ScriptSelectorDialog modal for its parent
***
bibisected with linux-64-5.2
use SAL_USE_VCLPLUGIN=gen
can't DnD
commit 1765ae3f74c65ad52b79d4ee29ac761f16ddd7bf

There was also a bug where commands could not be selected in the "Add Commands" dialog. 72e6a1365cb08986b542a5beb797634bca62d85b

***
Even if there is no problem on Windows, there may be a problem on gtk3.
Comment 4 Caolán McNamara 2025-09-13 11:09:10 UTC
implemented as https://gerrit.libreoffice.org/c/core/+/190917
Comment 5 Commit Notification 2025-09-14 10:12:33 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f4e2563012ff091ee27999713063fc87cd01fe7e

Resolves: tdf#156739 implement dnd for menu/toolbar customization pages

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-09-20 08:08:05 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/1c9a034783686f5b4bcbd29b4025d0a43d9a5c83

Resolves: tdf#156739 implement dnd for menu/toolbar customization pages

It will be available in 25.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.