Resolves: tdf#156739 implement dnd for menu/toolbar customization pages

dubious as a regression, but can be done now regardless

Change-Id: I67bc322cd63e65b5347b3e54651e3618d09a99b6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190917
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Tested-by: Jenkins
(cherry picked from commit f4e2563012ff091ee27999713063fc87cd01fe7e)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190958
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>